# 21-Agentic-Patterns

./: 11_Goal_Setting_Iteration_1.py  11_Goal_Setting_Iteration_2.py  11_Goal_Setting_Iteration_4.py  16_Resource_Aware_Opt_LLM_Reflection_v2.ipynb  16_Resource_Aware_Optimization.ipynb  1_Prompt_Chaining.ipynb  2_Routing_GADK.ipynb  3_Parallelization_GADK.ipynb  3_Parallelization_Langchain.ipynb  4_Reflection_GADK.ipynb  4_Reflection_LangChain.ipynb  5_Tool_Use_Crewai.ipynb  5_Tool_Use_GADK.ipynb  5_Tool_Use_Google_Search_GADK.ipynb  5_Tool_Use_LangChain.ipynb  7_Multi_Agent_Crewai.ipynb  binarygap_3374.py  binarygap_3597.py  docstats_2584.py  filecount_5645.py  filecount_7410.py  main.py  notes.txt  pyproject.toml  readme.md  requirements.txt  wordcount_3555.py
